# bugle

./: .gitignore  .gitmodules  CMakeLists.txt  FORMAT.md  LICENSE  MessageCenter.pro  README.md  data.qrc  main.cpp  main.qml  messagecenter.pri  messagecenterexamples.pri
dependencies/: CMakeLists.txt  json.pri
examples/: CMakeLists.txt  NOTES.md  attributes.cpp  dev.cpp  main.cpp  profiling.cpp  scopetest.h  systeminfo.cpp
include/MessageCenter/: booleanfilter.h  colortable.h  consolelogger.h  datetime.h  defines.h  dependencies.h  filteritem.h  formatter.h  htmllogger.h  jsonlogger.h  message.h  messagecenter.h  messageformatter.h  messageinfo.h  messagelist.h  messagelistproxy.h  messageobserver.h  messagescope.h  messageutility.h  observer.h  scope.h  systeminfo.h  tags.h  theme.h  utility.h
include/bugle/: bugle.h  core.h  filter.h  format.h  recipient.h  recipients.h  utility.h
include/bugle/core/: booleanfilter.h  defines.h  envelope.h  filter.h  filteritem.h  letter.h  message.h  messagecenter.h  observer.h  postoffice.h  recipient.h  scope.h  tags.h  types.h
include/bugle/filter/: address.h  lines.h  parse.h  route.h  tagfilter.h
include/bugle/format/: colors.h  colortable.h  doge.h  duration.h  formatter.h  theme.h
include/bugle/recipient/: consolelogger.h  htmllogger.h  jsonlogger.h  profiler.h
include/bugle/recipients/: consolelogger.h  jsonlogger.h  profiler.h
include/bugle/sinks/: consolelogger.h  htmllogger.h  jsonlogger.h  profiler.h
include/bugle/utility/: buildinfo.h  datetime.h  gpuinfo.h  sessioninfo.h  systeminfo.h  timestamp.h  utility.h
res/: style.css
src/: booleanfilter.cpp  colortable.cpp  consolelogger.cpp  datetime.cpp  filteritem.cpp  formatter.cpp  htmllogger.cpp  jsonlogger.cpp  message.cpp  messagecenter.cpp  messageformatter.cpp  messagelist.cpp  messagelistproxy.cpp  messagescope.cpp  messageutility.cpp  scope.cpp  systeminfo.cpp  tags.cpp  theme.cpp  utility.cpp
src/core/: booleanfilter.cpp  envelope.cpp  filter.cpp  filteritem.cpp  letter.cpp  message.cpp  messagecenter.cpp  postoffice.cpp  scope.cpp  tags.cpp
src/filter/: address.cpp  lines.cpp  route.cpp  tagfilter.cpp  tagline.cpp
src/format/: colortable.cpp  formatter.cpp  theme.cpp
src/recipients/: consolelogger.cpp  htmllogger.cpp  jsonlogger.cpp  profiler.cpp
src/sinks/: consolelogger.cpp  htmllogger.cpp  jsonlogger.cpp  profiler.cpp
src/utility/: buildinfo.cpp  datetime.cpp  gpuinfo.cpp  sessioninfo.cpp  systeminfo.cpp  timestamp.cpp  utility.cpp
test/unit/: setoperations.h
tests/: CMakeLists.txt  filter.cpp  main.cpp  parse.cpp
